--- a/index.html
+++ b/index.html
@@ -4,129 +4,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>sanches</title>
+  <link rel="stylesheet" href="css/style.css">
+  <title>baunty_Hunter</title>
 </head>
 
 <body>
-  <header class="header">
-    <img src="img/marca.svg" alt="lobo">
-    <nav>
-      <ul class="header-menu">
-        <li><a href="#experiencia">experiencia</a></li>
-        <li><a href="#formacao">formacao</a></li>
-        <li><a href="#contato">contato</a></li>
-      </ul>
-    </nav>
-
-  </header>
-
-  <main class="introducao">
-    <img src="img/perfil.jpg" alt="lobo cinza">
-    <div>
-      <h1>Desenvovedor <br>Front End & <br> UX/UI Designer</h1>
-      <p>Localizado no Rio de Janeiro</p>
-    </div>
-  </main>
-
-  <section class="experiencia" id="experiencia" aria-label="experiencia">
-    <h2 class="subtitulo">experiencia</h2>
-    <div>
-      <p class="experiencia-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <strong> HTML </strong>, <strong>CSS </strong> e<strong>JavaScript </strong>. Para aplicativos web como a rede social Dogs eu trabalhei no <strong> UX e UI Design</strong> do projeto.</p>
-
-      <div class="empresa">
-        <span class="empresa-ano">2022</span>
-        <h3 class="empresa-titulo">Bikcraft</h3>
-        <span class="empresa-titulo">desenvolvedor junior</span>
-        <p class="empresa-texto">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design.</p>
-        <ul class="empresa-habilidades">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>UX Dsign</li>
-          <li>UI Dsign</li>
-        </ul>
+  <header>
+    <div class="titulo-contet">
+      <div class="titulo-1"><img src="img/html.png" alt="">
+        <h1>Baunty_Hunter</h1>
       </div>
-      <div class="empresa">
-        <span class="empresa-ano">2020-22</span>
-        <h3 class="empresa-titulo">Surfbot</h3>
-        <span class="empresa-titulo">Estagiário</span>
-        <p class="empresa-texto">Surfbot é uma empresa que oferece aulas de surf no Rio de Janeiro. O projeto foi feito com HTML, CSS e JavaScript. Todo o projeto foi feito do zero.</p>
-        <ul class="empresa-habilidades">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-        </ul>
-      </div>
-      <div class="empresa">
-        <span class="empresa-ano">2022</span>
-        <h3 class="empresa-titulo">Brafé</h3>
-        <span class="empresa-titulo">desenvolvedor junior</span>
-        <p class="empresa-texto">Mais de 3 projetos foram desenvolvidos para a empresa Brafé. Eu trabalhei na criação do email marketing e também no HTML.</p>
-        <ul class="empresa-habilidades">
-          <li>HTML</li>
-          <li>Email Marketing</li>
-          <li>UX Dsign</li>
-          <li>UI Dsign</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-  <section class="formacao" id="formacao" aria aria-label="formacao">
-    <div class="formacao-contet">
-      <div>
-        <h2 class="subtitulo">formacao</h2>
-      </div>
-      <div>
 
-
-        <p class="formacao-texto">Minha mais recente experiência acadêmica foi o <strong>mestrado </strong>🎓 que fiz no exterior em <strong> UX Design </strong>. Além disso me mantenho sempre atualizado com cursos intensivos online.</p>
-        <ul class="faculdade-lista">
-          <li class="faculdade">
-            <span class="faculdade-tipo">bacharel</span>
-            <h3 class="faculdade-curso">adminustracao de empresas</h3>
-            <span class="faculdade-instituicao">UFRRF</span>
-          </li>
-          <li class="faculdade">
-            <span class="faculdade-tipo">Tecnologo</span>
-            <h3 class="faculdade-curso">Design Digital</h3>
-            <span class="faculdade-instituicao">Infnet</span>
-          </li>
-          <li class="faculdade">
-            <span class="faculdade-tipo">MESTRE</span>
-            <h3 class="faculdade-curso">User Experience Design</h3>
-            <span class="faculdade-instituicao">UCLL </span>
-          </li>
-        </ul>
-        <div class="formacao-extra">
-          <div class="cursos">
-            <h3>cursos intensivos</h3>
-            <ul>
-              <li>
-                UX Design & UI Design <span>56hr</span>
-              </li>
-              <li>
-                Front end para inicianrtes <span>76hr</span>
-              </li>
-            </ul>
-          </div>
-          <div class="idiomas">
-            <h3>cursos intensivos</h3>
-            <ul>
-              <li>
-                ingles<span>fluente</span>
-              </li>
-              <li>
-                espanhol <span>intermediario</span>
-              </li>
-            </ul>
-          </div>
-
+      <div class="titulo-2-contet">
+        <input type="checkbox" name="botao" id="botao">
+        <label for="botao"><img src="img/menu.png" alt=""></label>
+        <div class="titulo-2-flex">
+          <a href="">sobre</a>
+          <a href="">sing up</a>
         </div>
       </div>
     </div>
+  </header>
 
+  <section>
+    <div class="conteudo-contet">
+      <div class="conteudo-titulo">
+        <h1>seja um Baunty Hunter
+          <br>com nosso curso
+        </h1>
+        <p>Nosso curso com <strong>duraçao de 5 meses</strong>
+          com tudo completo ensino, <br> suport,atualizaçao das diciplinas.junto com o melhor do momento <br> o <strong>SANCHES com 50 MI de Baunty</strong></p>
+        <a href="">compre aqui</a>
+      </div>
+
+      <div class="conteudo-video"><video src="img/video.mp4" controls width="680px" height="400px"></video></div>
+    </div>
   </section>
+
 
 </body>
 
